added styling options with classes

--- a/1. responsive-web-design/basic.css
+++ b/1. responsive-web-design/basic.css
@@ -1,12 +1,25 @@
-.red-text {
-    color: red;
-}
-
 h2 {
-    font-family: Lobster, "Open Sans";
+    font-family: Lobster, monospace;
 }
 
 p {
     font-size: 16px;
     font-family: monospace;
+}
+
+.red-text {
+    color: red;
+}
+
+.smaller-image {
+    width: 100px;
+}
+
+.thick-green-border {
+    border: 10px solid green;
+    border-radius: 50%; 
+}
+
+.silver-background {
+    background-color: silver;
 }
