--- a/1. responsive-web-design/applied-visual.css
+++ b/1. responsive-web-design/applied-visual.css
@@ -1,9 +1,9 @@
 h4 {
-    
+    text-align: center;
 }
 
 p {
-    
+    text-align: justify;
 }
 
 .links {
@@ -12,6 +12,7 @@ p {
 }
 
 .fullCard {
+    width: 245px;
     border: 1px solid #ccc;
     border-radius: 5px;
     margin: 10px 5px;
