testing relative vs absolute positioning

--- a/1. responsive-web-design/applied-visual.css
+++ b/1. responsive-web-design/applied-visual.css
@@ -1,5 +1,9 @@
 h4 {
     text-align: center;
+    background-color: rgba(45, 45, 45, 0.1);
+    padding: 10px;
+    font-size: 27px;
+    text-transform: uppercase;
 }
 
 p {
@@ -8,11 +12,13 @@ p {
 
 .links {
     margin-right: 20px;
-
+    text-align: left;
+    color: black;
 }
 
 .fullCard {
-    width: 245px;
+    height: 500px;
+    width: 500px;
     border: 1px solid #ccc;
     border-radius: 5px;
     margin: 10px 5px;
@@ -21,4 +27,39 @@ p {
 
 .cardContent {
     padding: 10px;
+}
+
+.cardText {
+    margin-bottom: 30px;
+}
+
+#thumbnail {
+box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.links {
+    opacity: 0.7;
+}
+
+.box {
+    display: inline-block;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px 0;
+    position: relative;
+    left: 70px;
+    top: 30px;
+}
+
+.box:hover {
+    background: blue;
+}
+
+
+section {
+    position: relative;
+}
+
+.abs-box {
+    position: absolute;
 }
