--- a/1. responsive-web-design/applied-visual.css
+++ b/1. responsive-web-design/applied-visual.css
@@ -90,7 +90,7 @@ div {
 }
 
 /*
-    Centering using margin:auto
+    Horizontal centering using margin:auto
 */
 .centered-margin {
     background-color: blue;
@@ -134,3 +134,54 @@ div {
     background-color: blue;
     transform: skewX(24deg);
 }
+
+/*
+    Graphic formed using CSS
+*/
+.moon {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100px;
+    height: 100px;
+    background-color: transparent;
+    border-radius: 50%;
+    box-shadow: 25px 10px blue;
+}
+
+/* Heart */
+  .heart {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: pink;
+    height: 50px;
+    width: 50px;
+    transform: rotate(-45deg);
+  }
+  .heart::after {
+    background-color: pink;
+    content: "";
+    border-radius: 50%;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: 0px;
+    left: 25px;
+  }
+  .heart::before {
+    content: "";
+    background-color: pink;
+    border-radius: 50%;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: -25px;
+    left: 0px;
+  }
