--- a/1. responsive-web-design/applied-visual.css
+++ b/1. responsive-web-design/applied-visual.css
@@ -153,7 +153,7 @@ div {
 }
 
 /* Heart */
-  .heart {
+.heart {
     position: absolute;
     margin: auto;
     top: 0;
@@ -164,8 +164,9 @@ div {
     height: 50px;
     width: 50px;
     transform: rotate(-45deg);
-  }
-  .heart::after {
+}
+
+.heart::after {
     background-color: pink;
     content: "";
     border-radius: 50%;
@@ -174,8 +175,9 @@ div {
     height: 50px;
     top: 0px;
     left: 25px;
-  }
-  .heart::before {
+}
+
+.heart::before {
     content: "";
     background-color: pink;
     border-radius: 50%;
@@ -184,4 +186,58 @@ div {
     height: 50px;
     top: -25px;
     left: 0px;
-  }
+}
+
+/*
+    CSS Animation
+*/
+div {
+    height: 40px;
+    width: 70%;
+    background: black;
+    margin: 50px auto;
+    border-radius: 5px;
+}
+
+#rect {
+    animation-name: rainbow;
+    animation-duration: 4s;
+}
+
+@keyframes rainbow {
+    0% {
+        background-color: blue;
+    }
+
+    50% {
+        background-color: green;
+    }
+
+    100% {
+        background-color: yellow;
+    }
+}
+
+/*
+    CSS Animation Fowards
+*/
+button {
+    border-radius: 5px;
+    color: white;
+    background-color: #0F5897;
+    padding: 5px 10px 8px 10px;
+}
+
+button:hover {
+    animation-name: background-color;
+    animation-duration: 500ms;
+    /* add your code below this line */
+    animation-fill-mode: forwards;
+    /* add your code above this line */
+}
+
+@keyframes background-color {
+    100% {
+        background-color: #4791d0;
+    }
+}
