--- a/1. responsive-web-design/applied-visual.css
+++ b/1. responsive-web-design/applied-visual.css
@@ -197,6 +197,7 @@ div {
     background: black;
     margin: 50px auto;
     border-radius: 5px;
+    position: relative;
 }
 
 #rect {
@@ -241,3 +242,199 @@ button:hover {
         background-color: #4791d0;
     }
 }
+
+/* CSS Animation: Movement (Sliding) */
+#rect {
+    animation-name: rainbow;
+    animation-duration: 4s;
+}
+
+@keyframes rainbow {
+    0% {
+        background-color: blue;
+        top: 0px;
+        left: 0px;
+    }
+
+    50% {
+        background-color: green;
+        top: 50px;
+        left: 25px;
+    }
+
+    100% {
+        background-color: yellow;
+        top: 0px;
+        left: -25px;
+    }
+}
+
+/* CSS Animation: Movement and Opacity */
+#ball {
+    width: 70px;
+    height: 70px;
+    margin: 50px auto;
+    position: fixed;
+    left: 20%;
+    border-radius: 50%;
+    background: linear-gradient(35deg,
+            #ccffff,
+            #ffcccc);
+    animation-name: fade;
+    animation-duration: 3s;
+}
+
+@keyframes fade {
+    50% {
+        left: 60%;
+        opacity: 0.1;
+    }
+}
+
+/* CSS Animation: Infinite Bounce */
+#ball-infinite {
+    width: 100px;
+    height: 100px;
+    margin: 50px auto;
+    position: relative;
+    border-radius: 50%;
+    background: linear-gradient(35deg,
+            #ccffff,
+            #ffcccc);
+    animation-name: bounce;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes bounce {
+    0% {
+        top: 0px;
+    }
+
+    50% {
+        top: 249px;
+        width: 130px;
+        height: 70px;
+    }
+
+    100% {
+        top: 0px;
+    }
+}
+
+/* CSS Animation: Heartbeat */
+.back {
+    position: fixed;
+    padding: 0;
+    margin: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    animation-name: backdiv;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+
+.heart {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: pink;
+    height: 50px;
+    width: 50px;
+    transform: rotate(-45deg);
+    animation-name: beat;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+
+.heart:after {
+    background-color: pink;
+    content: "";
+    border-radius: 50%;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: 0px;
+    left: 25px;
+}
+
+.heart:before {
+    background-color: pink;
+    content: "";
+    border-radius: 50%;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: -25px;
+    left: 0px;
+}
+
+@keyframes backdiv {
+    50% {
+        background: #ffe6f2;
+    }
+}
+
+@keyframes beat {
+    0% {
+        transform: scale(1) rotate(-45deg);
+    }
+
+    50% {
+        transform: scale(0.6) rotate(-45deg);
+    }
+}
+
+<!-- CSS Animation: Twinkling Stars -->
+.stars {
+    background-color: white;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    animation-iteration-count: infinite;
+  }
+
+  .star-1 {
+    margin-top: 15%;
+    margin-left: 60%;
+    animation-duration: 1s;
+    animation-name: twinkle;
+  }
+
+  .star-2 {
+    margin-top: 25%;
+    margin-left: 25%;
+    animation-duration: 1s;
+    animation-name: twinkle;
+  }
+
+  .star-3 {
+    margin-top: 10%;
+    margin-left: 50%;
+    animation-duration: 1s;
+    animation-name: twinkle;
+  }
+
+  @keyframes twinkle {
+    20% {
+      transform: scale(0.5);
+      opacity: 0.5;
+    }
+  }
+
+  #back {
+    position: fixed;
+    padding: 0;
+    margin: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(black, #000099, #66c2ff, #ffcccc, #ffeee6);
+  }
