added files to test concepts on accessibility as well as dvd page files to test new project idea

--- a/1. responsive-web-design/applied-visual.css
+++ b/1. responsive-web-design/applied-visual.css
@@ -391,7 +391,7 @@ button:hover {
     }
 }
 
-<!-- CSS Animation: Twinkling Stars -->
+/* CSS Animation: Twinkling Stars */
 .stars {
     background-color: white;
     height: 30px;
