--- a/e. flexbox/box.css
+++ b/e. flexbox/box.css
@@ -1,22 +1,72 @@
-  #box-container {
-      display: flex;
-      height: 500px;
-      
-      /* ROW to align children horizontally */
-      flex-direction: row;
-      
-      /* or set children to COLUMN to align children vertically */
-      flex-direction: column;
-  }
+#box-container {
+    background-color: dimgrey;
+    display: flex;
+    height: 500px;
 
-  #box-1 {
-      background-color: dodgerblue;
-      width: 50%;
-      height: 50%;
-  }
+    /* ROW to align children horizontally */
+    flex-direction: row;
 
-  #box-2 {
-      background-color: orangered;
-      width: 50%;
-      height: 50%;
-  }
+    /* or set children to COLUMN to align children vertically */
+    flex-direction: column;
+
+    /*
+        Flex Justification (Main Axis)
+    */
+    justify-content: center;
+    justify-content: flex-end;
+    justify-content: space-between;
+    justify-content: space-around;
+    justify-content: space-evenly;
+
+    /*
+        Align Items (Cross-Axis)
+    */
+    align-items: baseline;
+    align-items: center;
+    align-items: flex-start;
+    align-items: flex-end;
+    
+    flex-wrap: wrap;
+}
+
+#box-1 {
+    background-color: dodgerblue;
+    width: 50%;
+    height: 50%;
+    flex-basis: 10em;
+    order: 2;
+    align-self: center;
+}
+
+#box-2 {
+    background-color: orangered;
+    width: 50%;
+    height: 50%;
+    flex-basis: 20em;
+    flex-grow: 3;
+    order: 1;
+}
+
+#box-3 {
+    background-color: violet;
+    width: 25%;
+    height: 50%;
+}
+
+#box-4 {
+    background-color: yellow;
+    width: 25%;
+    height: 50%;
+}
+
+#box-5 {
+    background-color: green;
+    width: 25%;
+    height: 50%;
+}
+
+#box-6 {
+    background-color: black;
+    width: 25%;
+    height: 50%;
+}
