--- a/f. grid/grid.css
+++ b/f. grid/grid.css
@@ -1,21 +1,23 @@
-.d1 {
+.item1 {
     background: LightSkyBlue;
 }
 
-.d2 {
+.item2 {
     background: LightSalmon;
 }
 
-.d3 {
+.item3 {
     background: PaleTurquoise;
 }
 
-.d4 {
+.item4 {
     background: LightPink;
 }
 
-.d5 {
+.item5 {
     background: PaleGreen;
+    grid-column: 2 / 4;
+    grid-row: 2 / 4;
 }
 
 .container {
@@ -23,9 +25,10 @@
     /* Number of arguments is the number of col/row */
     grid-template-columns: 100px 100px 100px;
     grid-template-rows: 1fr 1fr 1fr;
-    grid-gap: 10px 20px;
-    
+    grid-gap: 20px;
+
     font-size: 40px;
     width: 100%;
+    min-height: 300px;
     background: LightGray;
 }
