--- a/f. grid/grid.css
+++ b/f. grid/grid.css
@@ -4,6 +4,10 @@
 
 .item2 {
     background: LightSalmon;
+    justify-self: center;
+    /* Horizontal Center */
+    align-self: center;
+    /* Vertical Center */
 }
 
 .item3 {
@@ -18,6 +22,28 @@
     background: PaleGreen;
     grid-column: 2 / 4;
     grid-row: 2 / 4;
+    grid-area: header;
+}
+
+/* Testing Reponsive Layouts with Media Query */
+.item1 {
+    background: LightSkyBlue;
+    grid-area: header;
+}
+
+.item2 {
+    background: LightSalmon;
+    grid-area: advert;
+}
+
+.item3 {
+    background: PaleTurquoise;
+    grid-area: content;
+}
+
+.item4 {
+    background: lightpink;
+    grid-area: footer;
 }
 
 .container {
@@ -31,4 +57,39 @@
     width: 100%;
     min-height: 300px;
     background: LightGray;
+
+    /* Align all items */
+    /*
+        justify-items: center;
+        align-items: center;
+    */
+
+    grid-template-areas:
+        "header header header"
+        ". content content"
+        "footer footer footer";
+
+    grid-template-columns: repeat(3, minmax(90px, 1fr));
+}
+
+
+@media (min-width: 300px) {
+    .container {
+        grid-template-columns: auto 1fr;
+        grid-template-rows: auto 1fr auto;
+        grid-template-areas:
+            "advert header"
+            "advert content"
+            "advert footer";
+    }
+}
+
+/* 400px, the header and footer occupy the full length of the viewport */
+@media (min-width: 400px) {
+    .container {
+        grid-template-areas:
+            "header header"
+            "advert content"
+            "footer footer";
+    }
 }
