--- a/g. responsive-projects/portfolio.css
+++ b/g. responsive-projects/portfolio.css
@@ -1,49 +1,144 @@
 html {
-    font-size: 20px;
+    color: #E3E3E3;
+    font-size: 16px;
+    background-color: #2E2E2E;
+}
+
+body,
+html {
+    font-family: Segoe UI, SegoeUI, Segoe WP, Helvetica Neue, Helvetica, Tahoma, Arial, sans-serif;
 }
 
 main {
+    background-color: #2E2E2E;
     width: 1600px;
     margin: 0 auto;
     text-align: center;
 }
 
-@media (min-width: 860px) {
+@media (min-width: 10px) {
+    /* No query atm */
+}
 
+
+/*
+    ==============
+        Globals
+    ==============
+*/
+h1 {
+    font-size: 2.25rem;
+}
+
+a {
+    color: #E3E3E3;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+/*
+    ==============
+        Header
+    ==============
+*/
+header {
+    display: flex;
+    margin: 0;
+    padding: 0;
+
+    position: fixed;
+    top: 0;
+
+    height: 54px;
+    width: 1600px;
+
+    background-color: #171717;
+
+    border: 2px solid red;
+}
+
+.logo-item,
+.form-item {
+    display: flex;
+    width: 300px;
+}
+
+.logo,
+.search {
+    position: relative;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    margin: auto;
+}
+
+.logo {
+    width: 108px;
+    height: 23px;
+    background-repeat: no-repeat;
+    background-image: url(https://docs.microsoft.com/en-us/media/microsoft-logo-light.png);
+    background-size: contain;
 }
 
 #navbar {
-    position: fixed;
-    width: 1600px;
-    top: 0;
+    flex-grow: 1;
+    list-style-type: none;
 }
 
 ul {
     display: flex;
     margin: 0;
     padding: 0;
-    border: 1px solid black;
 }
 
 li {
-    flex-grow: 10;
+    flex-grow: 1;
     height: 36px;
-    
+
     list-style-type: none;
-    border: 1px dashed blue;
 }
 
 .nav-link + .nav-link {
     margin-left: 2%;
 }
 
-#welcome:before {
+
+/*
+    ==============
+        Main
+    ==============
+*/
+#welcome-section:before,
+#projects:before {
     display: block;
     content: "";
-    height: 36px;
+    height: 54px;
 }
 
-#welcome {
+#welcome-section,
+#projects {
+    background-color: #242424;
     width: 100%;
     height: 100vh;
+}
+
+#project-container {
+    border: 2px solid blue;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    width: 640px;
+    margin: 0 auto;
+}
+
+.project-tile {
+    width: 48%;
+    padding-bottom: 48%;
+    /* Same as width, sets height */
+    margin-bottom: 2%;
 }
